# pathtracer

./: Cargo.toml  README.md
src/: camera.rs  dielectric.rs  hit.rs  lambertian.rs  main.rs  material.rs  metal.rs  ray.rs  sphere.rs  vec3.rs
