[package]
name = "raytracing"
version = "0.1.0"
authors = ["Derek Guenther <dguenther9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"         # Extra iterator adaptors, iterator methods, free functions, and macros.
rand = "0.7.2"
rayon = "1.3.0"
